# martini

./: README.md  pyproject.toml
examples/: mcmc_demo.ipynb
src/martini/: __init__.py  distributions.py  mcmc.py
